--- a/ios/RNRecruitmentTask/Info.plist
+++ b/ios/RNRecruitmentTask/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DMMonoItalic.ttf</string>
+		<string>DMMonoLight.ttf</string>
+		<string>DMMonoLightItalic.ttf</string>
+		<string>DMMonoMedium.ttf</string>
+		<string>DMMonoMediumItalic.ttf</string>
+		<string>DMMonoRegular.ttf</string>
+		<string>Inter.ttf</string>
+	</array>
 </dict>
 </plist>
