--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.60.5",
+    "jotai": "^2.10.2",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-mmkv": "^3.1.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
     "react-native-svg": "^15.9.0"
